--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,6 @@
 @import "../bower_components/normalize-scss/_normalize.scss";
 @import "../bower_components/typeplate-starter-kit/css/_typeplate.scss";
 @import "./mixins.scss";
-
 /**
  * BOX-SIZING
  */
@@ -9,7 +8,6 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
-
 /**
  * GRIDS
  */
@@ -20,7 +18,6 @@
     font-size: 0;
     text-align: justify;
     position: relative;
-
     & > * {
         font-size: medium;
         text-align: left;
@@ -28,7 +25,6 @@
         width: 100%;
         vertical-align: top;
     }
-
     &:after {
         display: inline-block;
         width: 100%;
@@ -36,10 +32,8 @@
         font-size: medium;
     }
 }
-
 @include gridify(2, 400);
 @include gridify(4, 600);
-
 /**
  * PACE (automatic pre-loader thingy)
  */
@@ -49,15 +43,12 @@
     user-select: none;
     transition: all 1s ease;
 }
-
 .pace-inactive {
     opacity: 0;
 }
-
 .pace-active {
     opacity: 1;
 }
-
 .pace .pace-progress {
     background: #2299dd;
     position: fixed;
@@ -68,13 +59,71 @@
     height: 2px;
     transition: all 1s ease;
 }
-
 /**
  * GENERAL
  */
 
-img {max-width:100%;}
-
+img {
+    max-width: 100%;
+}
+html, body {
+    height: 100%;
+    transition: opacity .25s ease;
+}
+*:hover {
+    // border:1px solid red
+}
 body {
     transition: opacity .25s ease;
+    .app-container {
+        border: 1px solid blue;
+        max-width: 100%;
+        background-color: #efefef;
+        padding: 1em;
+        form {
+            width: : 100%;
+            input {
+                width: 100%;
+                height: 100%;
+                display: inline-block;
+            }
+            div {
+                width: 100%;
+                height: 25%;
+            }
+            .editor {
+                transition: all 2s ease;
+                // border:1px solid blue;
+                // background-color: white;
+                opacity: 1;
+                display: inline-block;
+                z-index: 1;
+            }
+            .hidden {
+                //display: inline;
+                position: absolute;
+                opacity: 0;
+                z-index: -1;
+            }
+            div.button-holder {
+                width: 10%;
+                display: inline-block;
+                padding: 0px;
+                button {
+                    width: 100% height: 30px;
+                    margin: 0px;
+                    margin-right: 3%;
+                    border-radius: 10px;
+                    border: 0px;
+                }
+            }
+            div.input-holder{
+                width: 88%;
+                display: inline-block;
+            }
+            .delete-button {
+                float: right;
+            }
+        }
+    }
 }
