--- a/templates/app.html
+++ b/templates/app.html
@@ -11,8 +11,8 @@
             <span class='description' contenteditable><%= task.get('description') %></span>
             <div class="grid grid-2-400">
                 <span>
-                    <input type="checkbox" name="urgent" id="urgent123<%= task.cid %>" <%= task.get('urgent') ? 'checked="checked"' : '' %> >
-                    <label for="urgent123<%= task.cid %>">Urgent</label>
+                    <input type="checkbox" name="urgent" id="urgent123<%= task.id %>" <%= task.get('urgent') ? 'checked="checked"' : '' %> >
+                    <label for="urgent123<%= task.id %>">Urgent</label>
                 </span>
                 <span>
                     <input type="date" name="duedate" placeholder="Due Date">
