--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,17 +1,26 @@
-
 <h5>Login:</h5>
 
 <form class="login">
-    <div><input type="email" placeholder="email" name="email" required></div>
-    <div><input type="password" placeholder="password" name="password" required></div>
+    <div>
+        <input type="email" placeholder="email" name="email" required>
+    </div>
+    <div>
+        <input type="password" placeholder="password" name="password" required>
+    </div>
     <button>√</button>
 </form>
 
-<h5>If you don't have an account, register here:</h5>
 
 <form class="register">
-    <div><input type="email" placeholder="email" name="email" required></div>
-    <div><input type="password" placeholder="password" name="password1" required></div>
-    <div><input type="password" placeholder="repeat password" name="password2" required></div>
+    <h5>If you don't have an account, register here:</h5>
+    <div>
+        <input type="email" placeholder="email" name="email" required>
+    </div>
+    <div>
+        <input type="password" placeholder="password" name="password1" required>
+    </div>
+    <div>
+        <input type="password" placeholder="repeat password" name="password2" required>
+    </div>
     <button>√</button>
 </form>
