--- a/templates/app.html
+++ b/templates/app.html
@@ -7,17 +7,21 @@
 <ul>
     <% data.each(function(task){ %>
         <li id="<%= task.id %>" class="<%= task.get('urgent') ? 'urgent' : '' %> <%= task.get('isDone') ? 'isDone' : '' %>">
-            <input type="checkbox" name="isDone" <% if(task.get('isDone')){ %> checked="checked" <% } %> >
-            <span class='description' contenteditable><%= task.get('description') %></span>
-            <div class="grid grid-2-400">
-                <span>
+            <input type="checkbox" name="isDone" <% if(task.get( 'isDone')){ %> checked="checked"
+            <% } %> >
+                <span class='description' contenteditable><%= task.get('description') %></span>
+                <div class="grid grid-2-400">
+                    <span>
                     <input type="checkbox" name="urgent" id="urgent123<%= task.id %>" <%= task.get('urgent') ? 'checked="checked"' : '' %> >
                     <label for="urgent123<%= task.id %>">Urgent</label>
                 </span>
-                <span>
+                    <span>
                     <input type="date" name="duedate" placeholder="Due Date">
                 </span>
-            </div>
+                <span class= 'delete-button'>
+                    x
+                </span>
+                </div>
         </li>
-    <% }) %>
+        <% }) %>
 </ul>
